// Copyright 2022 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

syntax = "proto3";

package io.harness.perpetualtask.instancesyncv2;

option java_multiple_files = true;

message CgInstanceSyncTaskParams {
  string account_id = 1;
  string cloud_provider_type = 2;
  bytes cloud_provider_details = 3;
}
